[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmike"
version = '0.0.3'
authors = [
	{name="Michael van Dyk",email="mv10g@fsu.edu"}
]
requires-python = ">=3.12"
classifiers = ["boop"]

[project.urls]
Homepage="science.party"
Issues="science.party"
