[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmike"
version = '0.0.4'
authors = [
	{name="Michael van Dyk",email="mvandyk@protonmail.com"}
]
requires-python = ">=3.12"
classifiers = ["bioinformatics"]

[project.urls]
Homepage="https://github.com/michaelBiochemist/Protein-Math"
Issues="https://github.com/michaelBiochemist/Protein-Math/Issues"
